--- a/study_code/css/src/b_03_float.css
+++ b/study_code/css/src/b_03_float.css
@@ -124,7 +124,7 @@ h2 {
 }
 
 
-/* --------------------- */
+/* -------------------------------------- */
 .float_area {
   width: 700px; height: auto;
   margin: auto;
