--- a/study_code/c_layout_01/css/src/b_01_layout_base.css
+++ b/study_code/c_layout_01/css/src/b_01_layout_base.css
@@ -1,6 +1,15 @@
 @charset "UTF-8";
 /* b_01_layout_base.css */
 
+/* common.css */
+
+.clearfix:after,
+.clearfix::after {
+  content: ""; display: block;
+  width: 100%; height: 0; clear: both;
+}
+
+/* ------------------------------------- */
 .ex_part {
   width: 900px; height: 900px;
   border-width: 1px;
@@ -97,6 +106,47 @@
 .inner_03 > .insert { width: 60%; background-color: #57a} 
 
 /* ------------------------------------*/
+.box_05 {
+  width: 600px; height: auto;
+  margin: auto;
+  border: 5px solid #ccc;
+}
+
+/* .box_05::after{
+  content: "";
+  display: block;
+  width: 100%; height: 0;
+  clear: both;
+} */
+
+.box_05 > div {
+  float: left;
+  width: 200px; height: 600px; 
+  padding: 5px; box-sizing: border-box;
+}
+
+.box_05 .insert {
+  width: 100%; height: 180px;
+  background-color: #dfa;
+}
+
+.box_05 > .inner_02 {
+  padding-top: 180px;
+  box-sizing: border-box;
+}
+
+/* .inner_02 > .insert { 
+  margin-top: 180px;
+} */
+
+.box_05 > .inner_03 > .insert {
+  margin-top: 360px;
+  /* border-top: 360px solid transparent;
+  background-clip: content-box; */
+}
+
+
+/* ------------------------------------*/
 .box_06 {
   width: 600px; height: auto; min-height: 200px;
   margin: auto;
@@ -152,12 +202,6 @@
   width: 100%; height: 0; clear: both;
 } */
 
-.clearfix {height: 0;}
-.clearfix:after,
-.clearfix::after {
-  content: ""; display: block;
-  width: 100%; height: 0; clear: both;
-}
 
 .inner_03 > .insert_01 { 
   float: left;
