--- a/study_code/c_layout_01/css/src/b_04_layout_test_pdf_result.css
+++ b/study_code/c_layout_01/css/src/b_04_layout_test_pdf_result.css
@@ -66,10 +66,10 @@
   display: inline-block;
 }
 
-/* ---------------------------------- */
+/* ----------------------------------------- */
 .q_10 .side_indicator {
   position: absolute;
-  right: 30px; top: 30%; bottom: 0; margin: auto; 
+  right: 30px; top: 30%;  
   width: 50px; height: auto;
   background-color: #0af;
 }
@@ -81,6 +81,7 @@
 }
 
 .q_10 li {
+  position: relative; /* span이 기준으로 잡기 위해 */
   width: 30px; height: 30px;
   margin-bottom: 20px;
 }
@@ -92,13 +93,18 @@
   width: 100%; height: 100%;
   border-radius: 100%;
   background-color: #fff;
+  text-align: center;
 }
 
 .q_10 span {
   display: none;
+  position: absolute; /* li에 relative 기준 잡아놓음 */
+  right: 50px; top: -5px;
   width: 200px; height: 40px;
+  box-sizing: border-box; padding: 5px;
   background-color: #06c;
-  margin-left: -250px;
+  color: #fff;
+  /* margin-left: -250px; */
 }
 
-.q_10 a:hover + span { display: block;}
+.q_10 a:hover + span { display: block;}  /* a와 span이 형제 관계이기 때문에 + 사용 */
