--- a/study_code/c_layout_01/css/src/c_01_web.css
+++ b/study_code/c_layout_01/css/src/c_01_web.css
@@ -2,6 +2,144 @@
 /* c_01_web.css */
 
 #wrap {
-  width: 1200px; height: 700px;
+  width: 1200px; height: auto;
   background-color: #ddd;
+}
+
+#headBox {
+  width: 100%; height: 100px;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  background-color: #ccc;
+}
+
+  h1 {
+    float: left;
+    width: 200px; height: 40px;
+    background-color: #555;
+  }
+
+  #navigation { 
+    float: right;
+    width: 600px; height: 40px;
+    background-color: #777;
+  }
+
+    .gnb { width: 100%; height: 100%;}
+    .gnb li {
+      float: left;
+      width: 25%; height: 100%;
+      box-sizing: border-box;
+      padding: 0 5px;
+      text-align: center;
+      line-height: 40px;
+    }
+
+    .gnb a {
+      display: block;
+      width: 100%; height: 100%;
+      background-color: #eee;
+    }
+
+
+#viewBox {
+  width: 100%; height: 300px;
+  background-color: #0C32EE;
+}
+
+/* #conBox 
+  --------------------------------- */
+#conBox {
+  width: 100%; height: 200px;
+}
+
+.con_inner_01 {
+  float: left;
+  width: 400px; height: 200px;
+  box-sizing: border-box; padding: 10px 20px;
+  background-color: #ccc;
+}
+
+  .tab_title_area {
+    width: 100%; height: 30px;
+    background-color: #eee;
+  }
+
+  .tab_title_area ul {
+    width: 100%; height: 100%;
+    box-sizing: border-box;
+    border-bottom: 1px solid #333;
+  }
+
+  .tab_title_area li {
+    float: left;
+    width: 100px; height: 100%;
+    box-sizing: border-box; padding: 0 5px;
+    text-align: center; line-height: 30px;
+    background-color: #fff;
+  }
+
+  .tab_title_area li.action {
+    border: 1px solid #333;
+    border-bottom: 0;
+  }
+
+  .tab_title_area button {
+    width: 100%; height: 100%;
+  }
+
+  .tab_content_area > div.action {
+    display: block;
+  }
+
+  .tab_content_area {
+    width: 100%; height: 150px;
+  }
+
+    .tab_detail_01 { 
+      display: none;
+      width: 100%; height: 100%;
+      background-color: #81C265;
+    }
+    .tab_detail_02 { 
+      display: none;
+      width: 100%; height: 100%;
+      background-color: #8F3B5B;
+    }
+
+
+.con_inner_02 {
+  float: left;
+  width: 400px; height: 200px;
+  background-color: #aaa;
+}
+.con_inner_03 {
+  float: left;
+  width: 400px; height: 200px;
+  background-color: #ccc;
+}
+
+#footBox {
+  width: 100%; height: 100px;
+  background-color: #1AC9B0;
+  box-sizing: border-box; padding: 30px 20px;
+}
+
+#footBox > h2 {
+  float: left;
+  width: 200px; height: 40px;
+  background-color: #ccc;
+}
+
+address {
+  float: left;
+  width: 600px; height: 40px;
+  margin-left: 100px;
+  background-color: #aaa;
+}
+
+.social {
+  float: right;
+  width: 200px; height: 40px;
+  background-color: #ccc;
 }
