--- a/study_code/c_layout_01/css/src/c_01_web.css
+++ b/study_code/c_layout_01/css/src/c_01_web.css
@@ -53,6 +53,7 @@
   width: 100%; height: 200px;
 }
 
+/* .con_inner_01 */
 .con_inner_01 {
   float: left;
   width: 400px; height: 200px;
@@ -107,18 +108,66 @@
       background-color: #8F3B5B;
     }
 
-
+/* .con_inner_02 */
 .con_inner_02 {
   float: left;
   width: 400px; height: 200px;
   background-color: #aaa;
 }
+
+/* .con_inner_03 */
 .con_inner_03 {
   float: left;
   width: 400px; height: 200px;
+  box-sizing: border-box; padding: 20px;
   background-color: #ccc;
 }
 
+  .con_inner_03 .btn { width: 100%; height: 30px;  }
+  .con_inner_03 button { 
+    width: 100%; height: 100%;
+    background-color: #fd0;
+  }
+
+  .con_inner_03 button:hover {
+    font-weight: 700;
+    background-color: #fa0;
+  }
+
+  .con_inner_03 button:focus {
+    outline: 0;
+    border-bottom: 3px solid #f06;
+    box-shadow: 3px 3px 3px #333;
+  }
+
+  /* modal */
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0; left: 0; z-index: 1000;
+    width: 100%; height: 100%;
+  }
+
+  /* .modal.action {display: none;} */
+
+  .modal_message {
+    position: absolute;
+    top: 0; bottom: 0; left: 0; right: 0;
+    margin: auto;
+    width: 500px; height: 300px;
+    box-sizing: ; padding: 30px;
+    border: 1px solid #333;
+    background-color: #fff;
+  }
+
+  .modal_bg {
+    width: 100%; height: 100%;
+    background-color: rgba(0,0,0,0.5);
+  }
+  
+  
+
+/* #footBox===================================================== */
 #footBox {
   width: 100%; height: 100px;
   background-color: #1AC9B0;
