--- a/study_code/c_layout_01/css/src/c_01_web.css
+++ b/study_code/c_layout_01/css/src/c_01_web.css
@@ -142,7 +142,7 @@
 
   /* modal */
   .modal {
-    display: none;
+    /* display: none; */
     position: fixed;
     top: 0; left: 0; z-index: 1000;
     width: 100%; height: 100%;
@@ -155,7 +155,7 @@
     top: 0; bottom: 0; left: 0; right: 0;
     margin: auto;
     width: 500px; height: 300px;
-    box-sizing: ; padding: 30px;
+    box-sizing: border-box; padding: 30px;
     border: 1px solid #333;
     background-color: #fff;
   }
