--- a/study_code/c_layout_01/css/src/c_02_web_result.css
+++ b/study_code/c_layout_01/css/src/c_02_web_result.css
@@ -4,43 +4,84 @@
 #wrap {
   width: 1200px; height: auto;  min-height: 700px;
   margin: auto;
+  padding-top: 100px;
 }
 
 /* #headBox */
 #headBox {
+  position: fixed; top: 0; left: 0;
   width: 100%; height: 100px;
   box-sizing: border-box;
   padding: 0 20px; padding-top: 60px;
-  background-color: #ccc;
+  background-color: rgba(200, 200, 200, 0.5);
 }
+
+.head_wrapper {
+  width: 1200px; height: 40px;
+  margin:auto;
+}
+
 
   h1 {
     float: left;
     width: 200px; height: 40px;
     background-color: #afa;
   }
+
   .navigation {
     float: right;
-    width: 400px; height: 30px;
+    width: 600px; height: 30px;
     margin-top: 10px;
     background-color: #aff;
   }
 
-  .navigation ul {
+  .navigation > ul {
     width: 100%; height: auto;
     background-color: #999;
   }
-  .navigation li {
+
+  .navigation > ul > li {
     float: left;
     width: 25%; height: auto;
     padding: 0 5px;
+
   }
-  .navigation a {
+
+  .nav_title { width: 100%; height: 30px; }
+
+  .nav_title a {
     display: block;
     width: 100%; height: 30px;
     text-align: center; line-height: 30px;
-    background-color: #faa;
   }
+
+
+  .nav_list { 
+    display: none;
+    width: 100%; height: auto; 
+    color: #fff;
+    background-color: #333;
+  }
+  .nav_list  li {
+    width: 100%; height: 40px;
+    margin-bottom: 10px;
+  }
+  .nav_list a {
+    display: block;
+    width: 100%; height: 100%;
+    text-align: center; line-height: 40px;
+  }
+
+
+  /* 한번에 다 나오는 것 */
+  .navigation:hover .nav_list {display: block;}
+  
+  .nav_title:hover {background-color: #171717; color: #fff;}
+  
+  /* 각자 나오는 것 */
+  /* .navigation li:hover > .nav_list {display: block; } */
+  
+  
 
 
 /* #viewBox */
@@ -55,17 +96,74 @@
 
 #contentBox > .con_area {
   float: left; width: 400px; height: 200px;
+  padding: 10px 30px;
 }
 
   .notice_area {
     background-color: #afd;
   }
+
+  .con_part {
+    width: 100%; height: 150px;
+    border: 1px solid #777;
+  }
+
+  .con_part ul { width: 100%; height: 100%; }
+
+  .notice_area ul {
+    list-style-type: decimal;
+    padding: 10px; padding-left: 30px; box-sizing: border-box;
+  }
+
+  .notice_area li {
+    width: 100%; height: 25px;
+    margin-bottom: 10px;
+  }
+
+
   .gallery_area {
+    counter-reset: gal_li;
     background-color: #daf;
   }
+
+  .gallery_area li::before {
+    counter-increment: gal_li;
+    content:counter(gal_li) ". ";
+  }
+
+  .gallery_area li {
+    float: left;
+    width: 100px; height: 150px;
+    margin-right: 19px;
+    background-color: #fff;
+  }
+
+  .gallery_area li:last-child { margin: 0;}
+
+
+  /* 하나씩 before으로 넣어줌 */
+  /* .gallery_area li:nth-child(1):before {content: "1."; }
+  .gallery_area li:nth-child(2):before {content: "2."; }
+  .gallery_area li:nth-child(3):before {content: "3."; }
+  .gallery_area li:nth-child(4):before {content: "4."; } */
+
   .commercial_area {
     background-color: #afd;
   }
+
+
+  /* 탭메뉴 설정 가이드 */
+  .con_part { display: none;}
+  .con_area > h3:active + .con_part {display: block;}
+
+
+/* #otherBox */
+#otherBox {
+  width: 900px; height: 800px;
+  margin: 30px auto;
+  background-image: linear-gradient(#aaf, #faa);
+}
+
 
 /* #footBox */
 #footBox {
