css 배경색 1가지 변경

--- a/study_code/a_project/css/src/main_v1.css
+++ b/study_code/a_project/css/src/main_v1.css
@@ -252,7 +252,7 @@ body {
 #benefitBox {
   width: 1280px; height: 500px;
   padding: 80px;
-  background-color: #eee;
+  background-color: #FFF1E0;
 }
 
   .benefit_title_area {
