--- a/study_code/a_project/css/src/main_v1.css
+++ b/study_code/a_project/css/src/main_v1.css
@@ -6,7 +6,7 @@
   width: 1000px; height: 60px;
   margin: auto;
   margin-bottom: 20px;
-  background-color: var(--color-sample1);
+  /* background-color: var(--color-sample1); */
 }
 
 .title_text { 
@@ -62,25 +62,36 @@ body {
 /* #headBox
   =================================================== */
 #headBox { 
-  position: relative;
+  position: fixed;
+  top: 0;
   width: 1280px; height: 150px;
   padding: 30px 100px;
-  background-color: #ccc;
+  background-color: #ffffffdd;
 }
 
   h1 {
     float: left;
     width: 170px; height: 60px;
     margin-top: 30px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
+    h1 a {
+      display: block;
+      width: 170px; height: 60px;
+    }
+
+    .logo {
+      width: 170px; height: auto;
+      margin-top: 10px;
+    }
+
   #gnb {
     position: absolute; left: 0; right: 0;
     float: left;
     margin: auto;
     margin-top: 50px;
     width: 500px; height: 40px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
     #gnb li{
@@ -104,7 +115,7 @@ body {
   #unb {
     float: right;
     width: 200px; height: 90px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
     .unb_btn {
@@ -155,15 +166,15 @@ body {
   =================================================== */
 #viewBox {
   width: 1280px; height: 600px;
+  margin-top: 150px;
   padding: 20px 50px;
-  background-color: #eee;
 }
 
   .view_area {
     position: relative;
     float: left;
     width: 750px; height: 550px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
   .view_before_btn {
@@ -216,14 +227,13 @@ body {
 #bestBox {
   width: 1280px; height: 600px;
   padding: 40px;
-  background-color: #ccc;
 }
 
 
   .best_area {
     width: 1000px; height: 420px;
     margin: auto;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
     .best_item {
@@ -259,7 +269,7 @@ body {
     width: 280px; height: 100px;
     margin: auto;
     margin-bottom: 60px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
     .benefit_title {
@@ -282,14 +292,14 @@ body {
   .benefit_detail_area {
     width: 910px; height: 170px;
     margin: auto;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
     .benefit {
       float: left;
       width: 270px; height: 170px;
       margin: auto;
-      margin-right: 50px;
+      margin-top: 15px; margin-right: 50px;
       text-align: center;
       font-size: 20px; font-weight: 400;
     }
@@ -309,7 +319,6 @@ body {
 #challengeBox {
   width: 1280px; height: 600px;
   padding: 40px;
-  background-color: #ccc;
 }
 
   .challenge_area {
@@ -322,7 +331,7 @@ body {
       float: left;
       width: 450px; height: 420px;
       margin: auto; margin-right: 100px;
-      background-color: var(--color-sample1);
+      /* background-color: var(--color-sample1); */
     }
 
     .challenge:last-child { margin-right: 0; }
@@ -332,13 +341,12 @@ body {
 #eventBox {
   width: 1280px; height: 600px;
   padding: 40px;
-  background-color: #eee;
 }
 
   .event_area {
     width: 1000px; height: 420px;
     margin: auto;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
   
     .event { 
@@ -385,7 +393,7 @@ body {
     position: relative;
     width: 100%; height: 220px;
     margin: auto; margin-top: 50px;
-    background-color: var(--color-sample1);
+    /* background-color: var(--color-sample1); */
   }
 
     .awards_before_btn {
@@ -441,7 +449,6 @@ body {
 #saleBox {
   width: 1280px; height: 600px;
   padding: 40px;
-  background-color: #eee;
 }
 
   .sale_area {
@@ -514,14 +521,14 @@ body {
 #footBox {
   width: 1280px; height: 500px;
   padding: 70px 0;
-  background-color: #999;
+  background-color: #1c1c1c;
 }
 
 .foot_top_area {
   width: 1200px; height: 40px;
   margin: auto;
   margin-bottom: 30px;
-  background-color: var(--color-sample1);
+  /* background-color: var(--color-sample1); */
 }
 
   #footBox h2 {
@@ -550,7 +557,7 @@ body {
   position: relative;
   width: 1200px; height: 300px;
   margin: auto;
-  background-color: var(--color-sample1);
+  /* background-color: var(--color-sample1); */
 }
 
   .foot_main_btn {
