--- a/study_code/b_step_01/css/src/b_08_unit.css
+++ b/study_code/b_step_01/css/src/b_08_unit.css
@@ -1,3 +1,66 @@
 @charset "UTF-8";
 /* b_08_unit.css */
 
+.unit_part {
+  width: 600px; height: 600px;
+  border: 1px solid #171717;
+  margin: 50px auto;
+}
+
+.unit_part h3 {
+  margin: 0; padding: 0;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #555;
+  font-size: 16px;
+}
+
+.unit_part .outer { 
+  background-color: rgba(255, 200, 0, 0.3); 
+  margin: auto;
+}
+.unit_part p { 
+  margin: 0; padding: 0; 
+  background-color: rgba(230, 170, 170, 0.5); 
+  margin: auto;
+}
+.unit_part span { 
+  display: block; 
+  margin: 0; padding: 0; 
+  background-color: rgba(100, 240, 100, 0.4); 
+  margin: auto;
+}
+.unit_part strong { 
+  display: block; 
+  margin: 0; padding: 0; 
+  background-color: rgba(120, 70, 200, 0.5); 
+  margin: auto;
+}
+.unit_part i { 
+  display: block; 
+  margin: 0; padding: 0; 
+  color: #fff; font-style: normal; 
+  background-color:rgba(51, 51, 51, 0.7); 
+  margin: auto;
+}
+/* --------------------------------------------------- */
+/* 16px == 12pt == 100%(최초 기본) == 1em(최초기본) == 1rem */
+/* px단위의 이해(600px*600px) */
+.px_part .outer {width: 300px; height: 300px;}
+.px_part p {width: 200px; height: 200px;}
+.px_part span {width: 300px; height: 300px;}
+.px_part strong {width: 150px; height: 150px;}
+.px_part i {width: 75px; height: 75px;}
+
+/* pt단위의 이해(600px*600px) - (450pt*450px) */
+.pt_part .outer {width: 225pt; height: 225pt;}
+.pt_part p {width: 150pt; height: 150pt;}
+.pt_part span {width: 225pt; height: 225pt;}
+.pt_part strong {width: 112.5pt; height: 112.5pt;}
+.pt_part i {width: 56.25pt; height: 56.25pt;}
+
+/* percemt단위의 이해(600px*600px) - (100%*100%) */
+.percent_part .outer {width: 50%; height: 50%;}
+.percent_part p {width: calc(100% / 3 * 2); height: 66.666667%;}
+.percent_part span {width: 150%; height: 150%;}
+.percent_part strong {width: 50%; height: 50%;}
+.percent_part i {width: 50%; height: 50%;}
