--- a/study_code/c_layout_01/css/src/c_05_web.css
+++ b/study_code/c_layout_01/css/src/c_05_web.css
@@ -26,7 +26,7 @@ h1 {
   width: 100%; height: 100px; height: 6.25rem;
   background-color: #ccc;
   background-color: var(--color-gray2);
-  background-image: linear-gradient(#0af, #057);
+  /* background-image: linear-gradient(#0af, #057); */
 }
 /* #viewBox
 ======================================= */
@@ -45,5 +45,7 @@ h1 {
 /* #footBox
 ======================================= */
 #footBox {
-
+  width: 100%; height: 100px; height: 6.25rem;
+  background-color: #aaa;
+  background-color: var(--color-gray3);
 }
