--- a/study_code/a_project/css/src/main_v1.css
+++ b/study_code/a_project/css/src/main_v1.css
@@ -16,12 +16,15 @@
 
 .title {
   width: 250px; height: 30px;
+  margin-bottom: 5px;
   font-size: 24px; font-weight: 700;
+  line-height: 30px;
   text-align: left;
 }
 .sub_title {
-  width: 450px; height: 30px;
+  width: 450px; height: 20px;
   font-size: 16px; font-weight: 400;
+  line-height: 20px;
   text-align: left;
 }
 .title_all {
@@ -96,21 +99,14 @@ body {
 
     #gnb li{
       float: left;
-      width: 80px; height: 40px;
-      margin: auto;
-      margin-right: 12px;
+      width: auto;
+      margin-right: 20px;
       font-size: 18px;
       text-align: center; line-height: 40px;
     }
-    #gnb li:nth-child(1) { width: 80px;}
-    #gnb li:nth-child(2) { width: 60px;}
-    #gnb li:nth-child(3) { width: 60px;}
-    #gnb li:nth-child(4) { width: 60px;}
-    #gnb li:nth-child(5){ width: 100px;}
-    #gnb li:last-child{
-      width: 80px;
-      margin-right: 0;
-    }
+
+    #gnb li:last-child {margin-right: 0;}
+
 
   #unb {
     float: right;
@@ -126,9 +122,7 @@ body {
       .unb_btn > li {
         display: block;
         float: left;
-        /* width: 60px;  */
         height: 20px;
-        /* margin-right: 10px; */
         font-size: 16px; font-weight: 400;
         text-align: center; line-height: 20px;
       }
@@ -314,7 +308,7 @@ body {
       color: #fff;
     }
 
-    .benefit_text_detail {
+    .benefit_title_detail {
       width: 260px; height: 20px;
       margin: auto; margin-top: 16px;
       text-align: center; line-height: 20px;
@@ -345,6 +339,20 @@ body {
       background-color: #E17900;
       border-radius: 100%;
     }
+
+      .benefit_img img {
+        width: 50px; height: auto;
+        margin: auto;
+        margin-top: 10px;
+      }
+
+      .benefit_text {
+        font-size: 20px;
+        font-weight: 400;
+      }
+      .benefit_bold {
+        font-weight: 700;
+      }
 
 /* #challengeBox
   =================================================== */
@@ -387,7 +395,7 @@ body {
       float: left;
       width: 320px; height: 420px;
       margin: auto; margin-right: 20px;
-      background-color: var(--color-sample1);
+      /* background-color: var(--color-sample1); */
     }
 
       .event_img {
@@ -467,6 +475,11 @@ body {
         margin-top: 30px;
         background-color: var(--color-sample1);
       }
+
+        .awards_side_black {
+          width: 100%; height: 100%;
+          background-color: rgba(0, 0, 0, 0.2);
+        }
     .awards_after_btn {
       position: absolute;
       top: 50%; right: 30px;
@@ -559,6 +572,7 @@ body {
 #magazineBox {
   width: 1280px; height: 300px;
   background-color: #FFF1E0;
+  padding-top: 30px;
 }
 
   .magazine{
@@ -614,7 +628,7 @@ body {
   .foot_main_btn {
     width: 600px; height: 30px;
     font-size: 16px; font-weight: 400;
-    text-align: left; font-weight: 30px;
+    text-align: left;
     color: #fff;
   }
 
@@ -670,7 +684,19 @@ body {
   .foot_bottom_btn > div {
     float: left; 
     margin-right: 20px;
+  }
+
+  .foot_language {
+    width: 60px; height: 30px;
     border: 1px solid #fff;
     border-radius: 5px;
+    text-align: center; line-height: 30px;
     color: #fff;
+  }
+  .foot_facebook img {
+    width: 30px; height: auto;
+  }
+
+  .foot_instagram img {
+    width: 30px; height: auto;
   }
